adds xUnit and Moq

--- a/Code/WebAppSolution/src/WebApp/Properties/launchSettings.json
+++ b/Code/WebAppSolution/src/WebApp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:11523/",
+      "applicationUrl": "http://localhost:11523/index.html",
       "sslPort": 0
     }
   },
