--- a/Code/WebAppSolution/src/WebApp/tsconfig.json
+++ b/Code/WebAppSolution/src/WebApp/tsconfig.json
@@ -2,6 +2,15 @@
     "compilerOptions": {
         "target": "es5",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
-    }
+        "emitDecoratorMetadata": true,
+        "watch":false
+        //,
+        //"outDir": "plm"
+    },
+    "exclude": [
+        "node_modules",
+        "typings/main",
+        "typings/main.d.ts"
+    ],
+    "compileOnSave": false
 }
